--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,11 +3,22 @@ font_family JetBrainsMono Nerd Font
 
 include ./theme.conf
 
+# TERMINAL_STYLING
 background_opacity 0.98
 hide_window_decorations titlebar
-# active_border_color #00ff00
 wayland_titlebar_color #121212
+enable_audio_bell no
+remember_window_size  yes
+tab_bar_style powerline 
+tab_bar_edge bottom
 
+# KEYBOARD_SHORTCUTS
+map ctrl+shift+v paste_from_clipboard
+map ctrl+shift+q quit
+map ctrl+alt+c clear_terminal reset active
+map ctrl+shift+f5 load_config_file
+map ctrl+shift+f1 open_url https://sw.kovidgoyal.net/kitty/
+map ctrl+shift+m minimize_window
 
 # BEGIN_KITTY_THEME
 # Rosé Pine Moon
