changed to bira prompt

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -11,6 +11,8 @@ enable_audio_bell no
 remember_window_size  yes
 tab_bar_style powerline 
 tab_bar_edge bottom
+window_padding_width 0
+active_border_color #00ff00
 
 # KEYBOARD_SHORTCUTS
 map ctrl+shift+v paste_from_clipboard
