stow-local-ignore added

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,7 +16,7 @@ active_border_color #00ff00
 
 # KEYBOARD_SHORTCUTS
 map ctrl+shift+v paste_from_clipboard
-map ctrl+shift+q quit
+map ctrl+q quit
 map ctrl+alt+c clear_terminal reset active
 map ctrl+shift+f5 load_config_file
 map ctrl+shift+f1 open_url https://sw.kovidgoyal.net/kitty/
