--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,14 +5,14 @@ include ./theme.conf
 
 # TERMINAL_STYLING
 background_opacity 0.98
-hide_window_decorations titlebar
-wayland_titlebar_color #121212
+# hide_window_decorations titlebar
+# wayland_titlebar_color #121212
 enable_audio_bell no
 remember_window_size  yes
 tab_bar_style powerline 
 tab_bar_edge bottom
 window_padding_width 0
-active_border_color #00ff00
+# active_border_color #00ff00
 
 # KEYBOARD_SHORTCUTS
 map ctrl+shift+v paste_from_clipboard
@@ -23,6 +23,6 @@ map ctrl+shift+f1 open_url https://sw.kovidgoyal.net/kitty/
 map ctrl+shift+m minimize_window
 
 # BEGIN_KITTY_THEME
-# Rosé Pine Moon
+# citylights
 include current-theme.conf
 # END_KITTY_THEME
