titlebar color added

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ include ./theme.conf
 # TERMINAL_STYLING
 background_opacity 0.98
 # hide_window_decorations titlebar
-# wayland_titlebar_color #121212
+wayland_titlebar_color #121212
 enable_audio_bell no
 remember_window_size  yes
 tab_bar_style powerline 
