changed tmux theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-
-set -g @plugin 'fabioluciano/tmux-tokyo-night'
+set -g @plugin "2KAbhishek/tmux2k"
+set -g @tmux2k-theme 'catppuccin'
 # set -g @theme_variation 'dawn'
 # set -g @theme_right_separator ''
 # set -g @theme_left_separator ''
