--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,6 +23,6 @@ map ctrl+shift+f1 open_url https://sw.kovidgoyal.net/kitty/
 map ctrl+shift+m minimize_window
 
 # BEGIN_KITTY_THEME
-# citylights
+# Bluloco Dark
 include current-theme.conf
 # END_KITTY_THEME
