added nvim welcome screen

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,7 @@
 font_size 13.0
-font_family JetBrainsMono Nerd Font
+# font_family JetBrainsMono Nerd Font
 
+font_family MartianMono Nerd Font
 include ./theme.conf
 
 # TERMINAL_STYLING
