--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin "2KAbhishek/tmux2k"
 set -g @tmux2k-theme 'catppuccin'
+set -g mouse on
 # set -g @theme_variation 'dawn'
 # set -g @theme_right_separator ''
 # set -g @theme_left_separator ''
