--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -18,12 +18,11 @@ window_padding_width 0
 # KEYBOARD_SHORTCUTS
 map ctrl+shift+v paste_from_clipboard
 map ctrl+q quit
-map ctrl+alt+c clear_terminal reset active
+map ctrl+alt+c clear_terminal reset 
 map ctrl+shift+f5 load_config_file
-map ctrl+shift+f1 open_url https://sw.kovidgoyal.net/kitty/
 map ctrl+shift+m minimize_window
 
 # BEGIN_KITTY_THEME
-# Bluloco Dark
+# Alien Blood
 include current-theme.conf
 # END_KITTY_THEME
