--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,61 +1,21 @@
-# vim:ft=kitty
-
-## name: YsDark
-## author: Ya-suke
-## license: MIT
-## blurb: A dracula inspired colorscheme for kitty.
-
-# basic colors
-foreground            #bbc5ff
-background            #1B1E35
-selection_foreground  #ffffff
-selection_background  #44475a
-
-# Cursor colors
-cursor            #bbc5ff
-cursor_text_color background
-
-# URL
-url_color #8be9fd
-
-# Colors for marks
-mark1_foreground #1B1E35
-mark1_background #f07178
-
-# Tab bar colors
-active_tab_foreground   #1B1E35
-active_tab_background   #bbc5ff
-inactive_tab_foreground #1B1E35
-inactive_tab_background #6272a4
-
-# black
-color0  #101010
-color8  #434758
-
-# red
-color1  #f07178
-color9  #ff8b92
-
-# green
-color2  #c3e88d
-color10 #ddffa7
-
-# yellow
-color3  #ffcb6b
-color11 #ffe585
-
-# blue
-color4  #82aaff
-color12 #9cc4ff
-
-# magenta
-color5  #e1acff
-color13 #c792ea
-
-# cyan
-color6  #89ddff
-color14 #a3f7ff
-
-# white
-color7  #d0d0d0
-color15 #ffffff
+background            #0f160f
+foreground            #637d75
+cursor                #73f990
+selection_background  #1d4025
+color0                #112615
+color8                #3c4711
+color1                #7f2b26
+color9                #df8008
+color2                #2f7e25
+color10               #18e000
+color3                #707f23
+color11               #bde000
+color4                #2f697f
+color12               #00a9df
+color5                #47577e
+color13               #0058df
+color6                #317f76
+color14               #00dfc3
+color7                #647d75
+color15               #73f990
+selection_foreground #0f160f
