--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,12 +1,12 @@
 font_size 13.0
 # font_family JetBrainsMono Nerd Font
 
-font_family MartianMono Nerd Font
+font_family FiraCode Nerd Font
 include ./theme.conf
 
 # TERMINAL_STYLING
 background_opacity 0.98
-# hide_window_decorations titlebar
+hide_window_decorations titlebar
 wayland_titlebar_color #121212
 enable_audio_bell no
 remember_window_size  yes
@@ -23,6 +23,6 @@ map ctrl+shift+f5 load_config_file
 map ctrl+shift+m minimize_window
 
 # BEGIN_KITTY_THEME
-# Alien Blood
+# Catppuccin-Macchiato
 include current-theme.conf
 # END_KITTY_THEME
