changed tmux and nvim ui

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,11 +1,35 @@
 
 # To update plugin for future revisions or bug fixes, do the "Prefix + U" keycombo
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin "2KAbhishek/tmux2k"
-set -g @tmux2k-theme 'catppuccin'
+set -g @plugin 'catppuccin/tmux#latest'
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @catppuccin_flavor "macchiato"
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
+# Run catppuccin plugin manually or through tpm
+# ...
+
+set -g status-left ""
+set -g  status-right "#{E:@catppuccin_status_directory}"
+set -ag status-right "#{E:@catppuccin_status_user}"
+set -ag status-right "#{E:@catppuccin_status_host}"
+set -ag status-right "#{E:@catppuccin_status_session}"
 set -g mouse on
 # set -g @theme_variation 'dawn'
 # set -g @theme_right_separator ''
