--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,21 +1,95 @@
-background            #0f160f
-foreground            #637d75
-cursor                #73f990
-selection_background  #1d4025
-color0                #112615
-color8                #3c4711
-color1                #7f2b26
-color9                #df8008
-color2                #2f7e25
-color10               #18e000
-color3                #707f23
-color11               #bde000
-color4                #2f697f
-color12               #00a9df
-color5                #47577e
-color13               #0058df
-color6                #317f76
-color14               #00dfc3
-color7                #647d75
-color15               #73f990
-selection_foreground #0f160f
+# vim:ft=kitty
+
+## name: Base2Tone Drawbridge Dark
+## author: Bram de Haan (https://github.com/atelierbram)
+## license: MIT
+## upstream: https://github.com/atelierbram/Base2Tone-kitty/blob/main/themes/base2tone-drawbridge-dark.conf
+## blurb: Duotone theme | bright blue - bright turquoise
+
+
+#: The basic colors
+
+foreground #9094a7
+background #1b1f32
+selection_foreground #9094a7
+selection_background #252a41
+
+
+#: Cursor colors
+
+cursor #289dbd
+cursor_text_color #1b1f32
+
+
+#: URL underline color when hovering with mouse
+
+url_color #c3cdfe
+
+
+#: kitty window border colors and terminal bell colors
+
+active_border_color #444b6f
+inactive_border_color #1b1f32
+bell_border_color #4961da
+visual_bell_color none
+
+
+#: OS Window titlebar colors
+
+wayland_titlebar_color #252a41
+macos_titlebar_color #252a41
+
+
+#: Tab bar colors
+
+active_tab_foreground #f9fbfb
+active_tab_background #1b1f32
+inactive_tab_foreground #a6aeb0
+inactive_tab_background #252a41
+tab_bar_background #252a41
+tab_bar_margin_color none
+
+
+#: Colors for marks (marked text in the terminal)
+
+mark1_foreground #1b1f32
+mark1_background #516aec
+mark2_foreground #1b1f32
+mark2_background #818b8d
+mark3_foreground #1b1f32
+mark3_background #33abcc
+
+
+#: The basic 16 colors
+
+#: black
+color0 #1b1f32
+color8 #51587b
+
+#: red
+color1 #627af4
+color9 #75d5f0
+
+#: green
+color2 #67c9e4
+color10 #252a41
+
+#: yellow
+color3 #99e9ff
+color11 #444b6f
+
+#: blue
+color4 #7289fd
+color12 #5e6587
+
+#: magenta
+color5 #67c9e4
+color13 #c3cdfe
+
+#: cyan
+color6 #8b9efd
+color14 #5cbcd6
+
+#: white
+color7 #9094a7
+color15 #e1e6ff
