--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,7 +7,7 @@ include ./theme.conf
 # TERMINAL_STYLING
 background_opacity 0.98
 hide_window_decorations titlebar
-wayland_titlebar_color #121212
+# wayland_titlebar_color #121212
 enable_audio_bell no
 remember_window_size  yes
 tab_bar_style powerline 
@@ -23,6 +23,6 @@ map ctrl+shift+f5 load_config_file
 map ctrl+shift+m minimize_window
 
 # BEGIN_KITTY_THEME
-# Catppuccin-Macchiato
+# Base2Tone Drawbridge Dark
 include current-theme.conf
 # END_KITTY_THEME
