--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,38 +2,30 @@
 # To update plugin for future revisions or bug fixes, do the "Prefix + U" keycombo
 # List of plugins
 
-set -g @plugin 'catppuccin/tmux#latest'
+set -g @plugin 'catppuccin/tmux#v2.1.0'
 set -g @plugin 'tmux-plugins/tpm'
 
+set -g mouse on
+set -g default-terminal "tmux-256color"
+
+# Configure the catppuccin plugin
 set -g @catppuccin_flavor "macchiato"
 set -g @catppuccin_window_status_style "rounded"
-set -g @catppuccin_window_number_position "right"
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+# Load catppuccin
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
-
-# Run catppuccin plugin manually or through tpm
-# ...
-
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
 set -g status-left ""
-set -g  status-right "#{E:@catppuccin_status_directory}"
-set -ag status-right "#{E:@catppuccin_status_user}"
-set -ag status-right "#{E:@catppuccin_status_host}"
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -ag status-right "#{E:@catppuccin_status_session}"
-set -g mouse on
-# set -g @theme_variation 'dawn'
-# set -g @theme_right_separator ''
-# set -g @theme_left_separator ''
-# set -g @theme_plugins 'datetime,weather,playerctl,yay'
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+
+run ~/.config/tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux
+run ~/.config/tmux/plugins/tmux-plugins/tmux-battery/battery.tmux
+# Or, if using TPM, just run TPM
 run '~/.tmux/plugins/tpm/tpm'
