--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,95 +1,36 @@
-# vim:ft=kitty
+## name: Cherry Midnight
+## author: nullxception
+## license: GPLv3
+## upstream: https://github.com/nullxception/cherry-kde/raw/main/kitty/cherry-midnight.conf
 
-## name: Base2Tone Drawbridge Dark
-## author: Bram de Haan (https://github.com/atelierbram)
-## license: MIT
-## upstream: https://github.com/atelierbram/Base2Tone-kitty/blob/main/themes/base2tone-drawbridge-dark.conf
-## blurb: Duotone theme | bright blue - bright turquoise
+foreground #bdc3df
+background #101017
+selection_foreground #101017
+selection_background #bdc3df
 
+cursor #bdc3df
+cursor_text_color #101017
+url_color #85b6ff
 
-#: The basic colors
+tab_bar_background #101017
+active_tab_foreground #bdc3df
+active_tab_background #33333f
+inactive_tab_foreground #dedeff
+inactive_tab_background #101017
 
-foreground #9094a7
-background #1b1f32
-selection_foreground #9094a7
-selection_background #252a41
-
-
-#: Cursor colors
-
-cursor #289dbd
-cursor_text_color #1b1f32
-
-
-#: URL underline color when hovering with mouse
-
-url_color #c3cdfe
-
-
-#: kitty window border colors and terminal bell colors
-
-active_border_color #444b6f
-inactive_border_color #1b1f32
-bell_border_color #4961da
-visual_bell_color none
-
-
-#: OS Window titlebar colors
-
-wayland_titlebar_color #252a41
-macos_titlebar_color #252a41
-
-
-#: Tab bar colors
-
-active_tab_foreground #f9fbfb
-active_tab_background #1b1f32
-inactive_tab_foreground #a6aeb0
-inactive_tab_background #252a41
-tab_bar_background #252a41
-tab_bar_margin_color none
-
-
-#: Colors for marks (marked text in the terminal)
-
-mark1_foreground #1b1f32
-mark1_background #516aec
-mark2_foreground #1b1f32
-mark2_background #818b8d
-mark3_foreground #1b1f32
-mark3_background #33abcc
-
-
-#: The basic 16 colors
-
-#: black
-color0 #1b1f32
-color8 #51587b
-
-#: red
-color1 #627af4
-color9 #75d5f0
-
-#: green
-color2 #67c9e4
-color10 #252a41
-
-#: yellow
-color3 #99e9ff
-color11 #444b6f
-
-#: blue
-color4 #7289fd
-color12 #5e6587
-
-#: magenta
-color5 #67c9e4
-color13 #c3cdfe
-
-#: cyan
-color6 #8b9efd
-color14 #5cbcd6
-
-#: white
-color7 #9094a7
-color15 #e1e6ff
+color0  #33333f
+color1  #ff568e
+color2  #64de83
+color3  #efff73
+color4  #73a9ff
+color5  #946ff7
+color6  #62c6da
+color7  #dedeff
+color8  #43435a
+color9  #ff69a2
+color10 #73de8a
+color11 #f3ff85
+color12 #85b6ff
+color13 #a481f7
+color14 #71c2d9
+color15 #ebebff
