--- a/.config/gh/hosts.yml
+++ b/.config/gh/hosts.yml
@@ -2,4 +2,5 @@ github.com:
     git_protocol: https
     users:
         aseeralfaisal:
-    user: aseeralfaisal
+        A2Fyise:
+    user: A2Fyise
