--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,7 @@ set -g default-terminal "tmux-256color"
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "macchiato"
 set -g @catppuccin_window_status_style "rounded"
+set -g status-position top
 
 # Load catppuccin
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
